--- a/css/index.css
+++ b/css/index.css
@@ -9,4 +9,13 @@
     width: 100%;
     height: 100vh;
     background-color: aqua;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.blocInfo{
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    justify-self: center;
 }
