--- a/css/index.css
+++ b/css/index.css
@@ -8,14 +8,19 @@
 .bodi{
     width: 100%;
     height: 100vh;
-    background-color: aqua;
+    background-color: rgb(255, 255, 255);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .blocInfo{
+    padding-top: 10px;
     flex-direction: column;
     display: flex;
     align-items: center;
     justify-self: center;
+    width: 300px;
+    height: 400px;
+    background-color: rgb(179, 179, 179);
+    border-radius: 20px;
 }
