--- a/css/index.css
+++ b/css/index.css
@@ -8,20 +8,20 @@
 .bodi{
     width: 100%;
     height: 100vh;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(200, 8, 8);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .blocInfo{
-    padding-top: 10px;
+    padding-top: 50px;
     flex-direction: column;
     display: flex;
     align-items: center;
     justify-self: center;
-    width: 300px;
+    width: 270px;
     height: 400px;
-    background-color: rgb(179, 179, 179);
+    background-color: rgba(179, 179, 179, 0.377);
     border-radius: 20px;
 }
 .bareDeProgresions{
@@ -35,9 +35,19 @@
    font-size: 10px; 
 }
 
-#pause-bottone, #stop-bottone{
-    display: none;
-}
 #play-bottone{
     cursor: pointer;
 } 
+.playBotone{
+    margin-top: 20px;
+    width: 230px;
+    height: 50px;
+    background-color: rgba(84, 20, 20, 0.367);
+    display: flex;
+    align-items: center;
+    border-radius: 10px;
+}
+
+
+
+
